Fix copy button copying line numbers, fix selection color causing code to be poorly readable when selecting, fix selection height for code blocks, fix duplicate underline effect for tabs

--- a/themes/trafiklab-2024/assets/sass/shortcodes/_tabs.scss
+++ b/themes/trafiklab-2024/assets/sass/shortcodes/_tabs.scss
@@ -15,7 +15,6 @@
   .nav-tabs {
     position: unset;
     width: unset;
-    color: #0f0f0f;
     background: $color-black;
     list-style-type: none;
     margin: 0;
@@ -32,13 +31,14 @@
     color: #717171 !important;
     font-weight: bold;
     display: block;
-    padding: 1rem;
+    padding: 12px 16px;
     text-decoration: none;
     border-bottom: none !important;
 
     &:hover {
       --show-active-line: 1;
       color: $color-white !important;
+      box-shadow: none !important;
 
       &::after {
         width: 100%;
@@ -71,5 +71,4 @@
   .code-tabs {
     margin: 1rem 0;
   }
-
 }
